# CoreEngine

./: .gitignore  CMakeLists.txt  README.md
CoreEngine/: CMakeLists.txt
CoreEngine/include/: CoreEngine.h  export.h
CoreEngine/src/: CoreEngine.cpp
Engine/: CMakeLists.txt
Engine/Camera/: Camera.cpp  Camera.h
Engine/Input/: Input.cpp  Input.h
Engine/Math/: Math.h
Engine/Models/: CubeVertexData.txt
Engine/OpenGL/: Buffer.cpp  Buffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Engine/OpenGL/glad/: glad.c  glad.h
Engine/Shaders/: shader.frag  shader.vert
Engine/Window/: Window.cpp  Window.h
Game/: Mesh.cpp  Mesh.h  main.cpp
Game/src/: main.cpp
